--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>HomePros</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <script
       src="https://kit.fontawesome.com/f3c8168dd6.js"
@@ -15,19 +15,98 @@
       type="text/css"
     />
     <script src="https://cdn.tailwindcss.com"></script>
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Manrope:wght@200..800&display=swap"
+      rel="stylesheet"
+    />
     <script>
       tailwind.config = {
         theme: {
           extend: {
             colors: {
               clifford: "#da373d",
+              "primary-arrow": "#ABEF5F",
             },
           },
         },
       };
     </script>
+    <style>
+      .font-manrope {
+        font-family: "Manrope";
+      }
+    </style>
   </head>
-  <body>
-    <h1>i am ready to assignment</h1>
+  <body class="font-manrope">
+    <header class="container mx-auto lg:px-20 px-5">
+      <div class="navbar bg-base-100">
+        <div class="navbar-start">
+          <a class="text-2xl font-bold"
+            ><i
+              class="fa-solid fa-arrow-right p-2 bg-primary-arrow rounded-full -rotate-45"
+            ></i>
+            HomePros</a
+          >
+        </div>
+        <div class="navbar-center hidden lg:flex">
+          <ul class="menu menu-horizontal px-1 text-xl">
+            <li><a class="text-black font-semibold">Home</a></li>
+            <li><a>Services</a></li>
+            <li><a>Portfolio</a></li>
+            <li><a>Blogs</a></li>
+            <li><a>Contact us</a></li>
+          </ul>
+        </div>
+        <div class="navbar-end lg:block hidden lg:ml-44">
+          <i
+            class="fa-solid fa-magnifying-glass p-2 text-gray-400 text-2xl mr-4 bg-white shadow rounded-full"
+          ></i>
+          <i
+            class="fa-solid fa-cart-shopping p-2 text-gray-400 text-2xl mr-4 bg-white shadow rounded-full"
+          ></i>
+          <a
+            class="btn bg-primary-arrow hover:bg-primary-arrow text-xl lg:rounded-full"
+            >Book Consult
+            <i
+              class="fa-solid fa-arrow-right p-2 rounded-full text-white -rotate-45 bg-black"
+            ></i
+          ></a>
+        </div>
+        <div class="dropdown">
+          <div
+            tabindex="0"
+            role="button"
+            class="btn btn-ghost lg:hidden"
+          >
+            <svg
+              xmlns="http://www.w3.org/2000/svg"
+              class="h-8 w-10 ml-32"
+              fill="none"
+              viewBox="0 0 24 24"
+              stroke="currentColor"
+            >
+              <path
+                stroke-linecap="round"
+                stroke-linejoin="round"
+                stroke-width="2"
+                d="M4 6h16M4 12h8m-8 6h16"
+              />
+            </svg>
+          </div>
+          <ul
+            tabindex="0"
+            class="menu menu-sm dropdown-content text-xl text-right bg-base-100 rounded-box z-[1] mt-3 w-52 p-2 shadow"
+          >
+            <li><a class="text-black font-semibold">Home</a></li>
+            <li><a>Services</a></li>
+            <li><a>Portfolio</a></li>
+            <li><a>Blogs</a></li>
+            <li><a>Contact us</a></li>
+          </ul>
+        </div>
+      </div>
+    </header>
   </body>
 </html>
