--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
             colors: {
               clifford: "#da373d",
               "primary-arrow": "#ABEF5F",
+              "view-clr": "#C9EAA6",
             },
           },
         },
@@ -75,11 +76,7 @@
           ></a>
         </div>
         <div class="dropdown">
-          <div
-            tabindex="0"
-            role="button"
-            class="btn btn-ghost lg:hidden"
-          >
+          <div tabindex="0" role="button" class="btn btn-ghost lg:hidden">
             <svg
               xmlns="http://www.w3.org/2000/svg"
               class="h-8 w-10 ml-32"
@@ -107,6 +104,29 @@
           </ul>
         </div>
       </div>
+      <section class="lg:mt-10 text-center">
+        <div class="flex justify-center items-center">
+          <img src="./assets/banner.png" alt="" />
+        </div>
+        <div class="lg:space-y-8 space-y-4 mt-10">
+          <h1 class="lg:text-7xl text-5xl font-bold">
+            A barn house of this design has a striking appearance
+          </h1>
+          <p class="text-xl lg:w-3/4 lg:ml-36 lg:text-center text-justify">
+            The barn house captivates with its blend of rustic charm and modern
+            sophistication, featuring weathered wood, sleek metal accents, and
+            large windows that flood the space with natural light.
+          </p>
+          <button
+            class="btn bg-view-clr hover:bg-primary-arrow lg:w-52 w-full border border-primary-arrow rounded-full"
+          >
+            View Details
+            <i
+              class="fa-solid fa-arrow-right p-2 bg-primary-arrow rounded-full -rotate-45"
+            ></i>
+          </button>
+        </div>
+      </section>
     </header>
   </body>
 </html>
