--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@
               clifford: "#da373d",
               "primary-arrow": "#ABEF5F",
               "view-clr": "#C9EAA6",
+              "bg-color": "#f4f4f4",
             },
           },
         },
@@ -128,5 +129,57 @@
         </div>
       </section>
     </header>
+    <main>
+      <section class="bg-bg-color lg:mt-28 mt-10">
+        <section
+          class="container mx-auto lg:px-20 px-5 grid grid-cols-1 md:grid-cols-2 gap-10 lg:py-20"
+        >
+          <div class="relative mt-10 lg:px-10">
+            <img
+              class="absolute -top-14 -ml-14 lg:block hidden"
+              src="./assets/Vector.png"
+              alt=""
+            />
+            <button class="bg-white px-6 p-2 rounded-full lg:-ml-0 ml-32 mb-4">
+              <i class="fa-solid fa-arrow-right mr-2"></i>
+              About us
+            </button>
+            <h1 class="text-4xl font-bold mb-4 lg:text-left text-center">
+              We design thoughtful, liveable spaces
+            </h1>
+            <p class="mb-4 lg:text-left text-center">
+              The barn house captivates with its blend of rustic charm and
+              modern sophistication, featuring weathered wood, sleek metal
+              accents.
+            </p>
+            <div class="flex lg:gap-10 gap-4 bg-white px-5 py-4 rounded-lg">
+              <img src="./assets/commercial.png" alt="" />
+              <div>
+                <h1 class="text-2xl font-bold mb-2">Commercial</h1>
+                <p>
+                  The barn house captivates with its blend of rustic charm and
+                  modern.
+                </p>
+              </div>
+            </div>
+            <div
+              class="flex lg:gap-10 gap-4 mt-4 bg-white px-5 py-4 rounded-lg"
+            >
+              <img src="./assets/residential.png" alt="" />
+              <div>
+                <h1 class="text-2xl font-bold mb-2">Residential</h1>
+                <p>
+                  The barn house captivates with its blend of rustic charm and
+                  modern.
+                </p>
+              </div>
+            </div>
+          </div>
+          <div>
+            <img src="./assets/Rectangle.png" alt="" />
+          </div>
+        </section>
+      </section>
+    </main>
   </body>
 </html>
