--- a/index.html
+++ b/index.html
@@ -179,6 +179,32 @@
             <img src="./assets/Rectangle.png" alt="" />
           </div>
         </section>
+        <section class="container mx-auto lg:px-20 px-5">
+          <div
+            class="bg-white lg:px-56 py-10 mt-14 rounded-lg grid grid-cols-1 md:grid-cols-2 lg:grid-cols-4 gap-20"
+          >
+            <div class="space-y-2 text-center">
+              <i class="fa-regular fa-message text-2xl" ></i>
+              <h3 class="text-2xl font-bold">520+</h3>
+              <p>Happy Client Review</p>
+            </div>
+            <div class="space-y-2 text-center">
+              <i class="fa-solid fa-building text-2xl"></i>
+              <h3 class="text-2xl font-bold">620+</h3>
+              <p>Work Departments</p>
+            </div>
+            <div class="space-y-2 text-center">
+              <i class="fa-solid fa-users text-2xl"></i>
+              <h3 class="text-2xl font-bold">550+</h3>
+              <p>Our Happy Client</p>
+            </div>
+            <div class="space-y-2 text-center">
+              <i class="fa-solid fa-user-group text-2xl"></i>
+              <h3 class="text-2xl font-bold">120+</h3>
+              <p>Staff Members</p>
+            </div>
+          </div>
+        </section>
       </section>
     </main>
   </body>
