--- a/index.html
+++ b/index.html
@@ -207,5 +207,10 @@
         </section>
       </section>
     </main>
+    <footer>
+      <h1>imran</h1>
+      <h1>imran</h1>
+      <h1>imran</h1>
+    </footer>
   </body>
 </html>
