--- a/index.html
+++ b/index.html
@@ -30,6 +30,10 @@
               "primary-arrow": "#ABEF5F",
               "view-clr": "#C9EAA6",
               "bg-color": "#f4f4f4",
+              "bg-card1":"#E7C1D3",
+              "bg-card2":"#EFDA6E",
+              "bg-card3":"#A4DAC3",
+              "bg-card4":"#77AAEA"
             },
           },
         },
@@ -41,8 +45,8 @@
       }
     </style>
   </head>
-  <body class="font-manrope">
-    <header class="container mx-auto lg:px-20 px-5">
+  <body class="font-manrope ">
+    <header class="container mx-auto lg:px-20 px-5 ">
       <div class="navbar bg-base-100">
         <div class="navbar-start">
           <a class="text-2xl font-bold"
@@ -63,10 +67,10 @@
         </div>
         <div class="navbar-end lg:block hidden lg:ml-44">
           <i
-            class="fa-solid fa-magnifying-glass p-2 text-gray-400 text-2xl mr-4 bg-white shadow rounded-full"
+            class="fa-solid fa-magnifying-glass p-2 text-gray-400 text-2xl mr-2 bg-white shadow rounded-full"
           ></i>
           <i
-            class="fa-solid fa-cart-shopping p-2 text-gray-400 text-2xl mr-4 bg-white shadow rounded-full"
+            class="fa-solid fa-cart-shopping p-2 text-gray-400 text-2xl mr-2 bg-white shadow rounded-full"
           ></i>
           <a
             class="btn bg-primary-arrow hover:bg-primary-arrow text-xl lg:rounded-full"
@@ -130,9 +134,9 @@
       </section>
     </header>
     <main>
-      <section class="bg-bg-color lg:mt-28 mt-10">
+    <section  class="bg-bg-color lg:mt-28 mt-10 py-20">
         <section
-          class="container mx-auto lg:px-20 px-5 grid grid-cols-1 md:grid-cols-2 gap-10 lg:py-20"
+          class="container mx-auto lg:px-20 px-5 grid grid-cols-1 md:grid-cols-2 gap-10 "
         >
           <div class="relative mt-10 lg:px-10">
             <img
@@ -205,12 +209,41 @@
             </div>
           </div>
         </section>
+      <section class="lg:mt-32 mt-10 container mx-auto lg:px-20 px-5">
+        <div class="flex justify-center items-center mb-2">
+          <button class="bg-white px-4 py-2 rounded-full"> <i
+            class="fa-solid fa-arrow-right p-2 mb-2"
+          ></i> How we works</button>
+        </div>
+        <div class="text-center lg:w-1/2 mx-auto">
+          <h1 class="lg:text-5xl text-4xl font-bold mb-2">Our Works Process</h1>
+          <p class="lg:text-xl">The barn house captivates with its blend of rustic charm and modern sophistication, featuring weathered wood, sleek metal accents.</p>
+        </div>
+        <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-4 gap-4 lg:mt-10 mt-8">
+          <div class="bg-bg-card1 p-4 rounded-lg">
+            <img class="mb-2" src="./assets/concept.png" alt="">
+            <h1 class="text-2xl font-bold mb-2">Concept</h1>
+            <p>The barn house captivates with its blend of rustic charm and modern.</p>
+          </div>
+          <div class="bg-bg-card2 p-4 rounded-lg">
+            <img class="mb-2" src="./assets/flow-chart.png" alt="">
+            <h1 class="text-2xl font-bold mb-2">Concept</h1>
+            <p>The barn house captivates with its blend of rustic charm and modern.</p>
+          </div>
+          <div class="bg-bg-card3 p-4 rounded-lg">
+            <img class="mb-2" src="./assets/vision.png" alt="">
+            <h1 class="text-2xl font-bold mb-2">Concept</h1>
+            <p>The barn house captivates with its blend of rustic charm and modern.</p>
+          </div>
+          <div class="bg-bg-card4 p-4 rounded-lg">
+            <img class="mb-2" src="./assets/budget-planning.png" alt="">
+            <h1 class="text-2xl font-bold mb-2">Concept</h1>
+            <p>The barn house captivates with its blend of rustic charm and modern.</p>
+          </div>
+        </div>
       </section>
+    </section>
     </main>
-    <footer>
-      <h1>imran</h1>
-      <h1>imran</h1>
-      <h1>imran</h1>
-    </footer>
+
   </body>
 </html>
