--- a/index.html
+++ b/index.html
@@ -211,8 +211,8 @@
         </section>
       <section class="lg:mt-32 mt-10 container mx-auto lg:px-20 px-5">
         <div class="flex justify-center items-center mb-2">
-          <button class="bg-white px-4 py-2 rounded-full"> <i
-            class="fa-solid fa-arrow-right p-2 mb-2"
+          <button class="bg-white px-4 py-2 rounded-full font-bold"> <i
+            class="fa-solid fa-arrow-right p-2"
           ></i> How we works</button>
         </div>
         <div class="text-center lg:w-1/2 mx-auto">
@@ -242,6 +242,63 @@
           </div>
         </div>
       </section>
+    </section>
+    <section class="container mx-auto lg:px-20 px-5 lg:mt-20 mt-10 ">
+      <div class="flex justify-center items-center">
+        <h1 class="bg-view-clr font-bold px-4 rounded-full mb-4"> <i
+          class="fa-solid fa-arrow-right p-2 "
+        ></i> Explore our Latest works</h1>
+      </div>
+      <div class="text-center lg:w-1/2 mx-auto">
+        <h2 class="text-5xl font-bold mb-4">Our Latest Portfolio</h2>
+        <p class="text-xl">The barn house captivates with its blend of rustic charm and modern sophistication, featuring weathered wood, sleek metal accents.</p>
+      </div>
+      <div class="lg:px-20 lg:mt-20 mt-10">
+        <div class="grid lg:grid-cols-4 gap-4">
+          <div class="lg:flex items-center gap-4 col-span-3 p-2 border rounded-lg">
+            <div>
+              <img class="w-full" src="./assets/img1.png" alt="">
+            </div>
+            <div>
+              <h2 class="text-2xl font-bold mb-4">Commercial</h2>
+              <p>The barn house captivates with its blend of rustic charm and modern. The barn house captivates with its blend of rustic charm and modern .</p>
+              <h3 class=" font-bold">View Details <i
+                class="fa-solid fa-arrow-right p-2 bg-primary-arrow -rotate-45 rounded-full "
+              ></i></h3>
+            </div>
+          </div>
+          <div class="p-4 border rounded-lg "><img src="./assets/img2.png" alt=""></div>
+        </div>
+        <div class="grid lg:grid-cols-6 gap-4 mt-4">
+          <div class="p-4 border rounded-lg "><img class="w-full" src="./assets/img3.png" alt="Description of the image">
+
+          </div>
+          <div class="lg:flex items-center col-span-4 p-4 border rounded-lg gap-4">
+            <div>
+              <img class="w-full" src="./assets/img1.png" alt="">
+            </div>
+            <div>
+              <h2 class="text-2xl font-bold mb-2">Commercial</h2>
+              <p>The barn house captivates with its blend of rustic charm and modern. The barn house captivates with its blend of rustic charm and modern .</p>
+              <h3 class="font-bold">View Details <i
+                class="fa-solid fa-arrow-right p-2 bg-primary-arrow -rotate-45 rounded-full"
+              ></i></h3>
+            </div>
+          </div>
+          <div class="p-4 border rounded-lg"><img class="w-full" src="./assets/img5.png" alt=""></div>
+        </div>
+      </div>
+    </section>
+    <section class="container mx-auto lg:px-20 px-5 lg:mt-20 mt-10 bg-bg-color lg:py-16">
+      <div class="flex justify-center items-center">
+        <h1 class="bg-view-clr px-4 rounded-full mb-4"> <i
+          class="fa-solid fa-arrow-right p-2 "
+        ></i>HomePros News</h1>
+      </div>
+      <div class="text-center lg:w-1/2 mx-auto">
+        <h2 class="text-5xl font-bold mb-4">Read Our Articles and News</h2>
+        <p class="text-xl">The barn house captivates with its blend of rustic charm and modern sophistication, featuring weathered wood, sleek metal accents.</p>
+      </div>
     </section>
     </main>
 
