articles section added

--- a/index.html
+++ b/index.html
@@ -250,7 +250,7 @@
         ></i> Explore our Latest works</h1>
       </div>
       <div class="text-center lg:w-1/2 mx-auto">
-        <h2 class="text-5xl font-bold mb-4">Our Latest Portfolio</h2>
+        <h2 class="lg:text-5xl font-bold mb-4 text-3xl">Our Latest Portfolio</h2>
         <p class="text-xl">The barn house captivates with its blend of rustic charm and modern sophistication, featuring weathered wood, sleek metal accents.</p>
       </div>
       <div class="lg:px-20 lg:mt-20 mt-10">
@@ -289,15 +289,47 @@
         </div>
       </div>
     </section>
-    <section class="container mx-auto lg:px-20 px-5 lg:mt-20 mt-10 bg-bg-color lg:py-16">
+    <section class="container mx-auto lg:px-20 px-5 lg:mt-20 mt-10 bg-bg-color lg:py-16 py-10">
       <div class="flex justify-center items-center">
         <h1 class="bg-view-clr px-4 rounded-full mb-4"> <i
           class="fa-solid fa-arrow-right p-2 "
         ></i>HomePros News</h1>
       </div>
       <div class="text-center lg:w-1/2 mx-auto">
-        <h2 class="text-5xl font-bold mb-4">Read Our Articles and News</h2>
+        <h2 class="lg:text-5xl text-3xl font-bold mb-4">Read Our Articles and News</h2>
         <p class="text-xl">The barn house captivates with its blend of rustic charm and modern sophistication, featuring weathered wood, sleek metal accents.</p>
+      </div>
+      <div class="grid grid-cols-1 md:grid-cols-3 gap-4 lg:px-44 lg:mt-10 mt-4">
+        <div class="p-4 bg-white rounded-lg">
+          <img src="./assets/article1.png" alt="">
+          <div class="mt-4">
+            <h1 class="text-2xl font-bold mb-2">How to choose the furniture right  of your home.</h1>
+            <p>The barn house captivates with its blend of rustic charm and modern. </p>
+            <p class="font-bold mb-2">Read more  <i
+              class="fa-solid fa-arrow-right p-2 bg-primary-arrow rounded-full -rotate-45"
+            ></i></p>
+          </div>
+        </div>
+        <div class="p-4 bg-white rounded-lg">
+          <img src="./assets/article1.png" alt="">
+          <div class="mt-4">
+            <h1 class="text-2xl font-bold mb-2">How to choose the furniture right  of your home.</h1>
+            <p>The barn house captivates with its blend of rustic charm and modern. </p>
+            <p class="font-bold mb-2">Read more  <i
+              class="fa-solid fa-arrow-right p-2 bg-primary-arrow rounded-full -rotate-45"
+            ></i></p>
+          </div>
+        </div>
+        <div class="p-4 bg-white rounded-lg">
+          <img src="./assets/article1.png" alt="">
+          <div class="mt-4">
+            <h1 class="text-2xl font-bold mb-2">How to choose the furniture right  of your home.</h1>
+            <p>The barn house captivates with its blend of rustic charm and modern. </p>
+            <p class="font-bold mb-2">Read more  <i
+              class="fa-solid fa-arrow-right p-2 bg-primary-arrow rounded-full -rotate-45"
+            ></i></p>
+          </div>
+        </div>
       </div>
     </section>
     </main>
