contact section added

--- a/index.html
+++ b/index.html
@@ -267,10 +267,10 @@
               ></i></h3>
             </div>
           </div>
-          <div class="p-4 border rounded-lg "><img src="./assets/img2.png" alt=""></div>
+          <div class="p-4 border rounded-lg"><img class="w-full" src="./assets/img2.png" alt=""></div>
         </div>
         <div class="grid lg:grid-cols-6 gap-4 mt-4">
-          <div class="p-4 border rounded-lg "><img class="w-full" src="./assets/img3.png" alt="Description of the image">
+          <div class="p-4 border rounded-lg"><img src="./assets/img3.png" alt="Description of the image">
 
           </div>
           <div class="lg:flex items-center col-span-4 p-4 border rounded-lg gap-4">
@@ -311,7 +311,7 @@
           </div>
         </div>
         <div class="p-4 bg-white rounded-lg">
-          <img src="./assets/article1.png" alt="">
+          <img src="./assets/article2.png" alt="">
           <div class="mt-4">
             <h1 class="text-2xl font-bold mb-2">How to choose the furniture right  of your home.</h1>
             <p>The barn house captivates with its blend of rustic charm and modern. </p>
@@ -321,7 +321,7 @@
           </div>
         </div>
         <div class="p-4 bg-white rounded-lg">
-          <img src="./assets/article1.png" alt="">
+          <img src="./assets/article3.png" alt="">
           <div class="mt-4">
             <h1 class="text-2xl font-bold mb-2">How to choose the furniture right  of your home.</h1>
             <p>The barn house captivates with its blend of rustic charm and modern. </p>
@@ -331,6 +331,29 @@
           </div>
         </div>
       </div>
+    </section>
+    <section
+    class="lg:mt-4 mt-2 bg-cover bg-no-repeat bg-center container mx-auto lg:px-20 "
+    style="background-image: url(./assets/bg.jpg)">
+    <div class="flex justify-center items-center ">
+      <h1 class="bg-view-clr px-4 rounded-full mb-4 mt-4"><i
+        class="fa-solid fa-arrow-right p-2 bg-primary-arrow -rotate-45 rounded-full"
+      ></i> Let's Connect</h1>
+     </div>
+     <div class="w-1/2 mx-auto text-center">
+      <h1 class="lg:text-5xl text-3xl font-bold mb-2">Let’s Discuss Next Project</h1>
+      <p>The barn house captivates with its blend of rustic charm and modern sophistication, featuring weathered wood, sleek metal accents.</p>
+     </div>
+     <div class="container mx-auto lg:px-20 lg:ml-80 lg:mt-10 mt-4 px-5 ">
+      <input class="lg:w-[25%] w-full px-4 py-2 rounded-full" type="text" placeholder="First Name*">
+      <input class="lg:w-[25%] w-full px-4 py-2 rounded-full lg:ml-5 mt-2" type="text" placeholder="Last Name*">
+      <br>
+      <input class="lg:w-[25%] w-full px-4 py-2 rounded-full lg:mt-5 mt-2" type="text" placeholder="Phone number*">
+      <input class="lg:w-[25%] w-full px-4 py-2 rounded-full lg:ml-5 mt-2" type="text" placeholder="Email address*">
+      <br>
+      <textarea class="lg:w-[620px] h-[200px] rounded-lg w-full px-4 py-2 lg:mt-5 mt-2 " placeholder="write your massage here"></textarea>
+      <button class="lg:w-[620px] w-full py-2 bg-primary-arrow rounded-full font-bold mt-4">Send Email </button>
+     </div>
     </section>
     </main>
 
