--- a/index.html
+++ b/index.html
@@ -333,7 +333,7 @@
       </div>
     </section>
     <section
-    class="lg:mt-4 mt-2 bg-cover bg-no-repeat bg-center container mx-auto lg:px-20 "
+    class="lg:mt-4 mt-2 bg-cover bg-no-repeat bg-center container mx-auto lg:px-20 lg:py-10 py-4 "
     style="background-image: url(./assets/bg.jpg)">
     <div class="flex justify-center items-center ">
       <h1 class="bg-view-clr px-4 rounded-full mb-4 mt-4"><i
@@ -352,10 +352,35 @@
       <input class="lg:w-[25%] w-full px-4 py-2 rounded-full lg:ml-5 mt-2" type="text" placeholder="Email address*">
       <br>
       <textarea class="lg:w-[620px] h-[200px] rounded-lg w-full px-4 py-2 lg:mt-5 mt-2 " placeholder="write your massage here"></textarea>
-      <button class="lg:w-[620px] w-full py-2 bg-primary-arrow rounded-full font-bold mt-4">Send Email </button>
+      <button class="lg:w-[620px] w-full py-2 bg-primary-arrow rounded-full font-bold mt-4">Send Email  <i
+        class="fa-solid fa-arrow-right p-2 bg-black text-white rounded-full -rotate-45 mr-4"
+      ></i></button>
      </div>
     </section>
     </main>
+
+    <footer class="bg-black lg:py-10 py-5 mt-4">
+      <div class="container mx-auto lg:px-20 px-5 h-60 mt-10">
+        <div class="flex justify-center items-center ">
+          <h1 class="font-bold text-white"> <i
+            class="fa-solid fa-arrow-right p-2 bg-primary-arrow text-black rounded-full -rotate-45 mr-4"
+          ></i>HomePros</h1>
+        </div>
+        <p class="lg:w-1/2 mx-auto text-center mt-4 text-gray-600">The barn house captivates with its blend of rustic charm and modern sophistication, featuring weathered wood, sleek metal accents.</p>
+      </div>
+      <ul class="lg:flex justify-center items-center gap-20 lg:-mt-28 -mt-20 text-gray-400 text-center ">
+        <li>Home</li>
+        <li>Services</li>
+        <li>Blogs</li>
+        <li>Portfolio</li>
+        <li>Contact us</li>
+      </ul>
+      <div class="flex justify-center items-center mt-10">
+      <button class="bg-primary-arrow font-bold ml-4 rounded-full px-4 py-2 text-center">Book Consult <i
+        class="fa-solid fa-arrow-right p-2 bg-black text-white rounded-full -rotate-45 mr-4"
+      ></i></button>
+      </div>
+    </footer>
 
   </body>
 </html>
