--- a/index.html
+++ b/index.html
@@ -209,6 +209,38 @@
             </div>
           </div>
         </section>
+        <section class="container mx-auto lg:px-20 px-5 lg:mt-20 mt-10">
+           <div class="text-center">
+            <h1 class=" lg:text-5xl text-3xl font-bold mb-2">Our client Review</h1>
+            <p class="lg:text-xl">Good client reviews are a pivotal marketing asset that can be the reason a client prospect takes.</p>
+           </div>
+           <div class="lg:mt-28 mt-4 grid grid-cols-1 md:grid-cols-3 lg:px-72 text-center gap-4">
+            <div class=" border-2 p-2 rounded hover:border-green-500">
+              <div class="w-24 lg:ml-16  ml-32 ">
+                <img class="w-full rounded-xl mb-4" src="./assets/download (1).jpeg" alt="">
+              </div>
+              <h1 class="font-semibold">Rayan m</h1>
+              <p class="text-gray-700 ">They are very nice guys, and services very interesting, recommanded for eveyone.</p>
+              <p class="text-gray-700">8/27/2024</p>
+            </div>
+            <div class=" border-2 hover:border-orange-500 p-2 rounded lg:-mt-10 bg-gradient-to-t from-white to-gray-200">
+              <div class="w-24 lg:ml-16 ml-32 ">
+                <img class="w-full rounded-xl mb-4" src="./assets/download (1).jpeg" alt="">
+              </div>
+              <h1 class="font-semibold">max</h1>
+              <p class="text-gray-700 ">They are very nice guys, and services very interesting, recommanded for eveyone.</p>
+              <p class="text-gray-700">8/27/2024</p>
+            </div>
+            <div class=" border-2 p-2 rounded hover:border-teal-500">
+              <div class="w-24 lg:ml-16  ml-32 ">
+                <img class="w-full rounded-xl mb-4" src="./assets/download (1).jpeg" alt="">
+              </div>
+              <h1 class="font-semibold">Rayan m</h1>
+              <p class="text-gray-700 ">They are very nice guys, and services very interesting, recommanded for eveyone.</p>
+              <p class="text-gray-700">8/27/2024</p>
+            </div>
+           </div>
+        </section>
       <section class="lg:mt-32 mt-10 container mx-auto lg:px-20 px-5">
         <div class="flex justify-center items-center mb-2">
           <button class="bg-white px-4 py-2 rounded-full font-bold"> <i
@@ -243,53 +275,6 @@
         </div>
       </section>
     </section>
-    <!-- <section class="container mx-auto lg:px-20 px-5 lg:mt-20 mt-10 ">
-      <div class="flex justify-center items-center">
-        <h1 class="bg-view-clr font-bold px-4 rounded-full mb-4"> <i
-          class="fa-solid fa-arrow-right p-2 "
-        ></i> Explore our Latest works</h1>
-      </div>
-      <div class="text-center lg:w-1/2 mx-auto">
-        <h2 class="lg:text-5xl font-bold mb-4 text-3xl">Our Latest Portfolio</h2>
-        <p class="text-xl">The barn house captivates with its blend of rustic charm and modern sophistication, featuring weathered wood, sleek metal accents.</p>
-      </div>
-      <div class="lg:px-20 lg:mt-20 mt-10">
-        <div class="grid lg:grid-cols-4 gap-4">
-          <div class="lg:flex items-center gap-4 col-span-3 p-2 border rounded-lg">
-            <div>
-              <img class="w-full" src="./assets/img1.png" alt="">
-            </div>
-            <div>
-              <h2 class="text-2xl font-bold mb-4">Commercial</h2>
-              <p>The barn house captivates with its blend of rustic charm and modern. The barn house captivates with its blend of rustic charm and modern .</p>
-              <h3 class=" font-bold">View Details <i
-                class="fa-solid fa-arrow-right p-2 bg-primary-arrow -rotate-45 rounded-full "
-              ></i></h3>
-            </div>
-          </div>
-          <div class="p-4 border rounded-lg"><img class="md:w-full" src="./assets/img2.png" alt=""></div>
-        </div>
-        <div class="grid lg:grid-cols-6 gap-4 mt-4">
-          <div class="p-4 border rounded-lg"><img src="./assets/img3.png" alt="Description of the image">
-
-          </div>
-          <div class="lg:flex items-center col-span-4 p-4 border rounded-lg gap-4">
-            <div>
-              <img class="w-full" src="./assets/img1.png" alt="">
-            </div>
-            <div>
-              <h2 class="text-2xl font-bold mb-2">Commercial</h2>
-              <p>The barn house captivates with its blend of rustic charm and modern. The barn house captivates with its blend of rustic charm and modern .</p>
-              <h3 class="font-bold">View Details <i
-                class="fa-solid fa-arrow-right p-2 bg-primary-arrow -rotate-45 rounded-full"
-              ></i></h3>
-            </div>
-          </div>
-          <div class="p-4 border rounded-lg"><img class="w-full" src="./assets/img5.png" alt=""></div>
-        </div>
-        
-      </div>
-    </section> -->
     <section class="bg-white py-24">
       <div class="text-center ">
         <button class="bg-[#ABEF5F80] px-4 py-2 rounded-full">
